# TorchLite

./: .gitignore  CMakeLists.txt  MLP.py  README.md  cpu_gpu.cu  logistic.py  matmul.cu  saxpy.cu
dataloader/: csvData.py
examples/: 1.py  mlp.py
grad_engine/: dotProd.py  matmul.py  pd_to_tensor.py  tensor.py  value.py
layers/: dense.py
loss/: binary_cross_entropy.py  mse.py
optims/: sgd.py
src/: bindings.cpp  ops.cu  ops.cuh  tensor.cpp  tensor.h
tests/: run_tests.py  test_add.py  test_cuda.py  test_matmul.py  test_mul.py  test_sub.py  test_tensor.py  testing.py  val_test.py
torchlite/: __init__.py  tensor.py
